Fixed header overflow on some browsers

--- a/Custom Header Logo/ADDON.css
+++ b/Custom Header Logo/ADDON.css
@@ -4,7 +4,7 @@
 #header .pagename a:hover {background-color:transparent;}
     
 /* Center Logo */
-#header-bottom-left {width:100%}
+#header-bottom-left {width: calc( 100% - 32px);}
 #header .pagename {width:100%;display:block;position:absolute;margin-left:-16px;top:-278px;z-index: -1;}
 .submit-page #header .pagename {top: -36px;}
 #header .pagename a {position:relative;display:block;top:0;margin-left: auto;margin-right: auto;}
